--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,11 +29,7 @@
         <FrameLayout
             android:id="@+id/content_frame"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <include layout="@layout/content_main" />
-
-        </FrameLayout>
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
