--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,18 +8,18 @@
         android:checkableBehavior="single">
         <item
             android:id="@+id/nav_products"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/ic_menu_grocery_store"
             android:title="@string/nav_products" />
         <item
             android:id="@+id/nav_profile"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/ic_menu_account"
             android:title="@string/nav_profile" />
     </group>
 
     <group android:id="@+id/nav_other">
         <item
             android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/ic_menu_settings"
             android:title="@string/nav_settings" />
     </group>
 </menu>
