--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -5,13 +5,21 @@
     android:layout_height="match_parent"
     tools:context=".ProductsFragment">
 
-    <TextView
+    <GridView
+        android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/app_name" />
+        android:gravity="center"
+        android:columnWidth="@dimen/product_card"
+        android:numColumns="auto_fit"
+        android:horizontalSpacing="24dp"
+        android:verticalSpacing="10dp"
+        android:stretchMode="spacingWidthUniform"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp" />
 
 </FrameLayout>
