--- a/app/src/main/res/layout/product_grid_item.xml
+++ b/app/src/main/res/layout/product_grid_item.xml
@@ -1,36 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/product_picture"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        app:cardUseCompatPadding="true"
+        app:cardElevation="4dp"
+        app:cardCornerRadius="3dp" >
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="132dp"
+            android:padding="4dp">
+
+            <ImageView
+                android:id="@+id/product_picture"
+                android:layout_width="wrap_content"
+                android:layout_height="132dp"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:contentDescription="product image" />
+
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/product_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="140dp"
+            android:gravity="center_horizontal"
+            android:paddingLeft="8dp"
+            android:paddingTop="4dp"
+            android:paddingRight="8dp"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/product_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="product image"
-            android:scaleType="centerCrop"/>
+            android:layout_marginLeft="125dp"
+            android:layout_marginTop="175dp"
+            android:gravity="center_horizontal"
+            android:textSize="12sp" />
 
-    </FrameLayout>
+        <RatingBar
+            android:id="@+id/stars"
+            android:layout_width="250dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="160dp"
+            android:layout_marginLeft="-60dp"
+            android:isIndicator="true"
+            android:clickable="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:rating="1"
+            android:numStars="5"
+            android:scaleX="0.5"
+            android:scaleY="0.5"/>
 
-    <TextView
-        android:id="@+id/product_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        android:paddingTop="4dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:gravity="center_horizontal"/>
-
-    <TextView
-        android:id="@+id/product_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:gravity="center_horizontal"/>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
