--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -12,6 +12,7 @@
         android:gravity="center"
         android:columnWidth="@dimen/product_card"
         android:numColumns="auto_fit"
+        android:scrollingCache="true"
         android:layout_gravity="center"
         android:verticalSpacing="10dp"
         android:stretchMode="spacingWidthUniform"
