--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -22,6 +22,16 @@
             android:selectAllOnFocus="true"
             android:singleLine="true"
             android:title="@string/pref_title_api_server_host" />
+
+        <EditTextPreference
+            android:capitalize="words"
+            android:defaultValue="@string/pref_default_img_server_host"
+            android:inputType="textCapWords"
+            android:key="img_server_host"
+            android:maxLines="1"
+            android:selectAllOnFocus="true"
+            android:singleLine="true"
+            android:title="@string/pref_title_img_server_host" />
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/pref_header_order">
