--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     tools:context=".ProfileFragment">
 
-
     <EditText
         android:id="@+id/login"
         android:layout_width="200dp"
@@ -25,11 +24,12 @@
         android:inputType="textPersonName" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/login"
+        android:layout_below="@id/login"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:text="Load my profile" />
+
 </RelativeLayout>
