--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#4086f5</color>
     <color name="colorPrimaryDark">#3268d5</color>
     <color name="colorAccent">#00B8D4</color>
+    <color name="textWhite">#FFFFFF</color>
 </resources>
