--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -179,7 +179,7 @@
                                             android:paddingStart="10dp"
                                             android:paddingLeft="10dp"
                                             android:text="@string/address_header_way"
-                                            android:textColor="@color/textWhite"
+                                            android:textColor="@android:color/white"
                                             android:textStyle="bold" />
 
                                         <TextView
@@ -191,7 +191,7 @@
                                             android:paddingStart="10dp"
                                             android:paddingLeft="10dp"
                                             android:text="@string/address_header_complement"
-                                            android:textColor="@color/textWhite"
+                                            android:textColor="@android:color/white"
                                             android:textStyle="bold" />
 
                                         <TextView
@@ -203,7 +203,7 @@
                                             android:paddingStart="10dp"
                                             android:paddingLeft="10dp"
                                             android:text="@string/address_header_postal_code"
-                                            android:textColor="@color/textWhite"
+                                            android:textColor="@android:color/white"
                                             android:textStyle="bold" />
 
                                         <TextView
@@ -215,7 +215,7 @@
                                             android:paddingStart="10dp"
                                             android:paddingLeft="10dp"
                                             android:text="@string/address_header_postal_city"
-                                            android:textColor="@color/textWhite"
+                                            android:textColor="@android:color/white"
                                             android:textStyle="bold" />
                                 </LinearLayout>
                         </TableRow>
@@ -232,6 +232,7 @@
                     android:layout_marginRight="8dp"
                     android:layout_marginBottom="32dp"
                     android:text="@string/profile_button_show_orders"
+                    android:onClick="showOrders"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
