profile and addresses

--- a/app/src/main/res/layout/address_table_item.xml
+++ b/app/src/main/res/layout/address_table_item.xml
@@ -6,7 +6,7 @@
     <LinearLayout
         android:id="@+id/row_linear"
         android:layout_width="fill_parent"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1">
 
         <TextView
