--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -144,20 +144,46 @@
                     app:layout_constraintStart_toEndOf="@+id/lblPhoneNumber"
                     app:layout_constraintTop_toTopOf="@+id/lblPhoneNumber" />
 
+                <TextView
+                    android:id="@+id/lblCreatedDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginTop="8dp"
+                    android:labelFor="@id/phoneNumber"
+                    android:text="@string/profile_title_created_date"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/lblPhoneNumber" />
+
+                <TextView
+                    android:id="@+id/createdDate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toEndOf="@+id/lblCreatedDate"
+                    app:layout_constraintTop_toTopOf="@+id/lblCreatedDate" />
+
                 <TableLayout
                     android:id="@+id/addressesTable"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
                     android:background="?attr/colorPrimary"
+                    android:paddingBottom="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/lblPhoneNumber">
+                    app:layout_constraintTop_toBottomOf="@+id/lblCreatedDate">
 
                         <TableRow
                             android:layout_width="match_parent"
