--- a/app/src/main/res/layout/order_list_item.xml
+++ b/app/src/main/res/layout/order_list_item.xml
@@ -51,7 +51,7 @@
 
         <TextView
             android:id="@+id/totalOrder"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
@@ -76,7 +76,7 @@
 
         <TextView
             android:id="@+id/shippingOrder"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
