--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -70,7 +70,7 @@
             app:layout_constraintTop_toBottomOf="@+id/product_pictures" />
 
         <TextView
-            android:id="@+id/product_description"
+            android:id="@+id/product_reference"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -155,7 +155,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/product_title_description"
-            app:layout_constraintBottom_toTopOf="@+id/product_description"
+            app:layout_constraintBottom_toTopOf="@+id/product_reference"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
