error message and clean code

--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,7 +8,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/product_title"
@@ -29,7 +28,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
+            app:layout_constraintStart_toEndOf="@+id/lblQuantity"
             app:layout_constraintTop_toBottomOf="@+id/product_stars" />
 
         <TextView
@@ -38,12 +37,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView5"
-            app:layout_constraintTop_toBottomOf="@+id/product_stars" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/lblReference"
+            app:layout_constraintTop_toTopOf="@+id/lblReference" />
 
         <ImageView
             android:id="@+id/product_picture"
@@ -53,7 +52,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/product_title"
-            app:srcCompat="@drawable/default_product_img" />
+            app:srcCompat="@drawable/default_product_img"
+            android:contentDescription="@string/product_default_image" />
 
         <RatingBar
             android:id="@+id/product_stars"
@@ -70,7 +70,7 @@
             app:layout_constraintTop_toBottomOf="@+id/product_pictures" />
 
         <TextView
-            android:id="@+id/product_reference"
+            android:id="@+id/product_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -128,7 +128,7 @@
             app:layout_constraintTop_toTopOf="@+id/product_stars" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/lblQuantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -138,26 +138,27 @@
             app:layout_constraintTop_toTopOf="@+id/product_quantity" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/lblReference"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
             android:text="@string/product_title_reference"
             app:layout_constraintStart_toEndOf="@+id/product_quantity"
-            app:layout_constraintTop_toTopOf="@+id/product_reference" />
+            app:layout_constraintTop_toBottomOf="@+id/product_stars" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/lblDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/product_title_description"
-            app:layout_constraintBottom_toTopOf="@+id/product_reference"
+            app:layout_constraintBottom_toTopOf="@+id/product_description"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toBottomOf="@+id/lblQuantity" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
