--- a/app/src/main/res/layout/activity_barcode.xml
+++ b/app/src/main/res/layout/activity_barcode.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/product_reference"
+            android:id="@+id/product_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -66,7 +66,8 @@
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/product_title"
-            app:srcCompat="@drawable/default_product_img" />
+            app:srcCompat="@drawable/default_product_img"
+            android:contentDescription="@string/product_default_image" />
 
         <Button
             android:id="@+id/btnProductQuantity"
@@ -96,7 +97,7 @@
             android:inputType="number"
             app:layout_constraintEnd_toStartOf="@+id/btnProductQuantity"
             app:layout_constraintStart_toEndOf="@+id/lblProductQuantity"
-            app:layout_constraintTop_toBottomOf="@+id/product_reference" />
+            app:layout_constraintTop_toBottomOf="@+id/product_description" />
 
         <Button
             android:id="@+id/btnLoadProductWithBarcode"
