--- a/app/src/main/res/layout/product_pictures_grid_item.xml
+++ b/app/src/main/res/layout/product_pictures_grid_item.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:contentDescription="product image" />
+            android:contentDescription="@string/product_default_image" />
 
     </androidx.cardview.widget.CardView>
 </RelativeLayout>
