--- a/app/src/main/res/layout/products_grid_item.xml
+++ b/app/src/main/res/layout/products_grid_item.xml
@@ -22,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="132dp"
                 android:layout_gravity="center_vertical|center_horizontal"
-                android:contentDescription="product image" />
+                android:contentDescription="@string/product_default_image" />
 
         </FrameLayout>
 
@@ -43,6 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="120dp"
+            android:layout_marginStart="120dp"
             android:textColor="@android:color/holo_red_dark"
             android:layout_marginTop="175dp"
             android:gravity="center_horizontal"
@@ -54,13 +55,14 @@
             android:layout_height="40dp"
             android:layout_marginTop="160dp"
             android:layout_marginLeft="-60dp"
+            android:layout_marginStart="-60dp"
             android:isIndicator="true"
             android:clickable="false"
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:numStars="5"
             android:scaleX="0.5"
-            android:scaleY="0.5"/>
+            android:scaleY="0.5" />
 
     </androidx.cardview.widget.CardView>
 </LinearLayout>
